# FracTal-ChessEngine

./: .gitignore  AnParser.cpp  AnParser.h  Board.cpp  Board.h  CMakeLists.txt  GameState.cpp  GameState.h  LICENSE  Move.cpp  Move.h  Position.cpp  Position.h  Protocol.cpp  Protocol.h  README.md  Types.h  main.cpp
src/: AnParser.cpp  AnParser.h  Board.cpp  Board.h  BoardEval.cpp  BoardEval.h  CMakeLists.txt  Eval.cpp  Eval.h  GameState.cpp  GameState.h  Logger.cpp  Logger.h  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  Position.cpp  Position.h  Protocol.cpp  Protocol.h  Tables.cpp  Tables.h  TimeManager.cpp  TimeManager.h  Transposition.cpp  Transposition.h  TranspositionTable.cpp  TranspositionTable.h  Types.cpp  Types.h  Utils.cpp  Utils.h  Zobrist.cpp  Zobrist.h  main.cpp
src/BitBoard/: Board.cpp  Board.h  GameState.cpp  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  Tables.cpp  Tables.h  Types.cpp  Types.h  Utils.cpp  Utils.h
tests/: main.cpp
